@@ -5,6 +5,7 @@
 - Improved: Quick mode behavior is better for amount field of forms now
 - Improved: You can add inventory and transfer page as shortcuts now
 - Improved: Display a warning if stock feature is disabled (#139)
+- Improved: Actions in product overview bottom sheet are more reachable
 - Improved: Updated translations
 - Fixed: Menus were not displayed after first app start (#365)
 - Fixed: Inactive products cannot be added to shopping list now (#398)
